# fw_swm_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/swm_ros/: swm_ros.h
install/: dependencies.rosinstall
src/: main.cc  node_rosbag.cc  node_rosstream.cc  swm_ros.cc  swm_zyre_config.json
srv/: insertHumanDetectionIntoSwmUTM.srv  insertImageIntoSwm.srv
