<?xml version="1.0"?>
<package format="2">
  <name>swm_ros</name>
  <version>0.0.0</version>
  <description>swm_ros</description>
  <maintainer email="hitimo@ethz.ch">hitimo</maintainer>
  <license>ASL</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>image_transport</depend>
  <depend>opencv2_catkin</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
</package>
